# libjson-rpc-cpp

./: CMakeLists.txt
src/jsonrpc/: CMakeLists.txt  rpc.h
src/jsonrpc/connectors/: zmqclient.cpp  zmqclient.h
